class NodeInput():
    def __init__(self) -> None:
        pass