@startuml entity
!pragma useIntermediatePackages false

class entity.Condition.Condition {
  result: None
}
abstract class entity.FlowchartComponent.FlowchartComponent {
  id: int
  title: str
  description: str
  state: State
}
enum entity.State.State {
  INACTIVE: 0 {static}
  TRIGGERED: 1 {static}
  RUNNING: 2 {static}
  SUCCESSFUL: 3 {static}
  CANCELLED: 4 {static}
  FAILED: 5 {static}
}
class entity.Edge.Edge {
  start_node: Node
  end_node: Node
  conditions: List[Condition]
  parameters: Dict[str, str]
}
abstract class entity.nodes.Node.Node {
  inputs: Dict[str, NodeInput]
  outputs: None
  subscribers: List[FlowchartComponent]
}
class entity.Flowchart.Flowchart {
  nodes: None
  edges: None
  timeout: None
}
class entity.NodeInput.NodeInput {
}
entity.FlowchartComponent.FlowchartComponent <|-- entity.Condition.Condition
entity.FlowchartComponent.FlowchartComponent *-- entity.State.State
entity.Edge.Edge *-- entity.nodes.Node.Node
entity.Edge.Edge *-- entity.Condition.Condition
entity.FlowchartComponent.FlowchartComponent <|-- entity.Edge.Edge
entity.nodes.Node.Node *-- entity.NodeInput.NodeInput
entity.nodes.Node.Node *-- entity.FlowchartComponent.FlowchartComponent
entity.FlowchartComponent.FlowchartComponent <|-- entity.nodes.Node.Node
entity.FlowchartComponent.FlowchartComponent <|-- entity.Flowchart.Flowchart
footer Generated by //py2puml//
@enduml

